--- a/analysis/1_cleaning.qmd
+++ b/analysis/1_cleaning.qmd
@@ -96,7 +96,8 @@ summarize(df, N = n(), .by=c("Language", "Experimenter")) |>
   arrange(desc(N)) |> 
   gt::gt() |> 
   gt::opt_stylize() |> 
-  gt::opt_interactive(use_compact_mode = TRUE) 
+  gt::opt_interactive(use_compact_mode = TRUE) |> 
+  gt::tab_header("Number of participants per recruitment source")
 ```
 
 
@@ -104,6 +105,12 @@ summarize(df, N = n(), .by=c("Language", "Experimenter")) |>
 ## Feedback
 
 ### Evaluation
+
+The majority of participants found it to be a "fun" experience. It is interesting to note that reports of "fun" were significantly associated with finding (some) stimuli arousing. Conversely, reporting "no feelings" was associated with finding the experiment "boring".
+
+::: {.panel-tabset}
+
+#### Proportion
 
 ```{r}
 df |> 
@@ -136,6 +143,43 @@ df |>
   )
 ```
 
+#### Co-occurence
+
+```{r}
+cor <- df |> 
+  select(starts_with("Feedback"), -Feedback_Comments) |> 
+  mutate_all(~ifelse(.=="True", 1, 0)) |> 
+  correlation(method="tetrachoric", redundant = TRUE) |> 
+  correlation::cor_sort() |> 
+  correlation::cor_lower()
+
+cor |> 
+  mutate(val = paste0(insight::format_value(rho), format_p(p, stars_only=TRUE))) |>
+  mutate(Parameter2 = fct_rev(Parameter2)) |>
+  mutate(Parameter1 = fct_relabel(Parameter1, \(x) str_remove_all(x, "Feedback_")),
+         Parameter2 = fct_relabel(Parameter2, \(x) str_remove_all(x, "Feedback_"))) |>
+  ggplot(aes(x=Parameter1, y=Parameter2)) +
+  geom_tile(aes(fill = rho), color = "white") +
+  geom_text(aes(label = val), size = 3) +
+  labs(title = "Feedback Co-occurence Matrix") +
+  scale_fill_gradient2(
+    low = "#2196F3",
+    mid = "white",
+    high = "#F44336",
+    breaks = c(-1, 0, 1),
+    guide = guide_colourbar(ticks=FALSE),
+    midpoint = 0,
+    na.value = "grey85",
+    limit = c(-1, 1))  + 
+  theme_minimal() +
+  theme(legend.title = element_blank(),
+        axis.title.x = element_blank(),
+        axis.title.y = element_blank(),
+        axis.text.x = element_text(angle = 45, hjust = 1))
+```
+
+:::
+
 ### Comments
 
 ```{r}
@@ -157,7 +201,8 @@ data.frame(Language = df$Language,
 #| code-fold: false
 
 outliers <- c(
-  # "S344"  # Negative Arousal-Valence correlations
+  # "S206"  # Collapsed RTs in both phases
+  # "S399"  # Negative Arousal-Valence correlations
   )
 potentials <- list()
 ```
@@ -222,20 +267,32 @@ potentials$expe_duration <- arrange(df, Experiment_Duration) |>
 
 ```{r}
 plot_hist <- function(dat) {
+  dens <- rbind(
+    mutate(bayestestR::estimate_density(filter(dftask, RT1 < 40 & RT2 < 40)$RT1), 
+           Phase="Emotional ratings",
+           y = y / max(y)),
+    mutate(bayestestR::estimate_density(filter(dftask, RT1 < 40 & RT2 < 40)$RT2), 
+           Phase="Reality rating",
+           y = y / max(y))
+  )
+  
   dat |> 
-    mutate(Participant = fct_reorder(Participant, RT1)) |> 
-    filter(RT1 < 100) |> 
-    ggplot(aes(x=RT1, fill=Participant)) +
-    geom_histogram(bins=140) +
-    coord_cartesian(xlim = c(0, 15)) +
-    scale_fill_metro_d(guide="none") +
-    theme_modern() +
+    filter(RT1 < 40 & RT2 < 40) |>  # Remove very long RTs
+    # mutate(Participant = fct_reorder(Participant, RT1)) |> 
+    pivot_longer(cols = c(RT1, RT2), names_to = "Phase", values_to = "RT") |>
+    mutate(Phase = ifelse(Phase == "RT1", "Emotional ratings", "Reality rating")) |>
+    ggplot(aes(x=RT)) +
+    geom_area(data=dens, aes(x=x, y=y, fill=Phase), alpha=0.33, position="identity") +
+    geom_density(aes(color=Phase, y=after_stat(scaled)), linewidth=1.5) + 
+    scale_x_sqrt(breaks=c(0, 2, 5, 10, 20)) +
+    theme_minimal() +
     theme(axis.title.y = element_blank(),
           axis.ticks.y = element_blank(),
           axis.text.y = element_blank(),
           axis.line.y = element_blank()) +
-    labs(title = "Distribution of Response Time for each Participant", x="Response time (for 3 scales) per stimuli (s)") +
-    facet_wrap(~Participant, ncol=5, scales="free_y")
+    labs(title = "Distribution of Response Time for each Participant", x="Response time per stimuli (s)") +
+    facet_wrap(~Participant, ncol=5, scales="free_y") +
+    coord_cartesian(xlim = c(0, 25))
 }
 ```
 
@@ -269,6 +326,25 @@ plot_hist(dftask[dftask$Participant %in% df$Participant[61:120], ])
 plot_hist(dftask[dftask$Participant %in% df$Participant[121:180], ])
 ```
 
+
+#### 181-240
+
+```{r}
+#| fig-width: 15
+#| fig-height: 15
+
+plot_hist(dftask[dftask$Participant %in% df$Participant[181:240], ])
+```
+
+#### 241-300
+
+```{r}
+#| fig-width: 15
+#| fig-height: 15
+
+plot_hist(dftask[dftask$Participant %in% df$Participant[241:264], ])
+```
+
 :::
 
 
@@ -299,7 +375,9 @@ df |>
   theme_bw() +
   ggside::theme_ggside_void() +
   theme(ggside.panel.scale = .3,
-        panel.border = element_blank()) 
+        panel.border = element_blank(),
+        axis.ticks.y = element_blank(),
+          axis.text.y = element_blank()) 
 ```
 
 ### Response to Erotic Stimuli
@@ -424,9 +502,9 @@ show_distribution <- function(dftask, target="Arousal") {
                                  at=c("Relevance", "Category", "Sex", "SexualOrientation"), 
                                  method="KernSmooth") |>
     ggplot(aes(x = x, y = y)) +
-    geom_line(aes(color = Relevance, linetype = Category)) +
+    geom_line(aes(color = Relevance, linetype = Category), linewidth=1) +
     facet_grid(SexualOrientation~Sex, scales="free_y")  +
-    scale_color_manual(values = c("Relevant" = "red", "Non-erotic" = "blue", "Irrelevant"="orange")) +
+    scale_color_manual(values = c("Relevant" = "red", "Non-erotic" = "blue", "Irrelevant"="darkorange")) +
     scale_y_continuous(expand = c(0, 0)) +
     scale_x_continuous(expand = c(0, 0)) +
     theme_minimal()  +
@@ -557,9 +635,10 @@ p_edu
 
 ```{r p_demographics_sex}
 colors <- c(
-  "NA" = "#2196F3", "No" = "#E91E63", "Condoms (for partner)" = "#9C27B0",
+  "NA" = "#2196F3", "None" = "#E91E63", "Condoms (for partner)" = "#9C27B0",
   "Combined pills" = "#FF9800", "Intrauterine Device (IUD)" = "#FF5722", 
-  "Intrauterine System (IUS)" = "#795548"
+  "Intrauterine System (IUS)" = "#795548", "Progestogen pills" = "#4CAF50",
+  "Other" = "#FFC107", "Condoms (female)" = "#607D8B"
 )
 colors <- colors[names(colors) %in% c("NA", df$BirthControl)]
 
@@ -767,6 +846,7 @@ correlation::cor_test(scores, "BAIT_SEM", "BAIT") |>
   theme(ggside.panel.scale = .1) 
 ```
 
+While the two correlate substantially, they have different benefits. The empirical score has a more straightforward meaning and is more reproducible (as it is not based on a model fitted on a specific sample), the model-based score takes into account the relative importance of the contribution of each item to their factor.
 
 ### Validity
 
@@ -805,7 +885,9 @@ marginaleffects::predictions(m, by=c("AI_Knowledge"), newdata = "marginalmeans")
   ggplot(aes(x=AI_Knowledge, y=estimate)) +
   geom_jitter2(data=df, aes(y=BAIT_SEM), alpha=0.2, width=0.1) +
   geom_line(aes(group=1), position = position_dodge(width=0.2)) +
-  geom_pointrange(aes(ymin = conf.low, ymax=conf.high), position = position_dodge(width=0.2))
+  geom_pointrange(aes(ymin = conf.low, ymax=conf.high), position = position_dodge(width=0.2)) +
+  theme_minimal() +
+  labs(x = "AI-Knowledge", y="BAIT Score")
 ```
 
 #### Gender and Age
