Add graph analysis

--- a/analysis/1_cleaning.qmd
+++ b/analysis/1_cleaning.qmd
@@ -106,7 +106,7 @@ summarize(df, N = n(), .by=c("Language", "Experimenter")) |>
 
 ### Evaluation
 
-The majority of participants found it to be a "fun" experience. It is interesting to note that reports of "fun" were significantly associated with finding (some) stimuli arousing. Conversely, reporting "no feelings" was associated with finding the experiment "boring".
+The majority of participants found the study to be a "fun" experience. Interstingly, reports of "fun" were significantly associated with finding at least some stimuli arousing. Conversely, reporting "no feelings" was associated with finding the experiment "boring".
 
 ::: {.panel-tabset}
 
@@ -747,13 +747,14 @@ This section pertains to the validation of the BAIT scale measuring beliefs and 
 
 ::: {.panel-tabset}
 
-### Structure 
+### Factor Analyis
 
 #### Exploratory Factor Analysis
 
 ```{r}
 bait <- df |> 
-  select(starts_with("BAIT_"), -BAIT_Duration) 
+  select(starts_with("BAIT_"), -BAIT_Duration) |> 
+  rename_with(function(x) gsub("BAIT_\\d_", "", x))
 
 
 cor <- correlation::correlation(bait, redundant = TRUE) |> 
@@ -805,16 +806,91 @@ display(efa)
 #### Confirmatory Factor Analysis
 
 ```{r}
-m1 <- lavaan::cfa(efa_to_cfa(efa, threshold="max"), data=df)
+m1 <- lavaan::cfa(efa_to_cfa(efa, threshold="max"), data=bait)
 m2 <- lavaan::cfa(
-  "G =~ BAIT_5_ImitatingReality + BAIT_6_EnvironmentReal + BAIT_4_VideosIssues + BAIT_8_TextIssues + BAIT_3_VideosRealistic + BAIT_1_ImagesRealistic + BAIT_2_ImagesIssues + BAIT_7_TextRealistic", 
-  data=df)
+  "G =~ ImitatingReality + EnvironmentReal + VideosIssues + TextIssues + VideosRealistic + ImagesRealistic + ImagesIssues + TextRealistic", 
+  data=bait)
 
 # bayestestR::bayesfactor_models(m1, m2)
 lavaan::anova(m1, m2)
 ```
 ```{r}
 display(parameters::parameters(m1))
+```
+
+
+### Graph Analysis
+
+Exploratory Graph Analysis (EGA) is a recently developed framework for psychometric assessment, that can be used to estimate the number of dimensions in questionnaire data using network estimation methods and community detection algorithms, and assess the stability of dimensions and items using bootstrapping.
+
+#### Unique Variable Analysis (UVA)
+
+Unique Variable Analysis (Christensen, Garrido, & Golino, 2023) uses the weighted topological overlap measure (Nowick et al., 2009) on an estimated network. Values greater than 0.25 are determined to have considerable local dependence (i.e., redundancy) that should be handled (variables with the highest maximum weighted topological overlap to all other variables (other than the one it is redundant with) should be removed).
+
+
+```{r}
+uva <- EGAnet::UVA(data = bait, cut.off = 0.3)
+uva
+uva$keep_remove
+```
+
+#### Networks
+
+```{r}
+#| fig-height: 20
+#| fig-width: 12
+
+ega <- list()
+for(model in c("glasso", "TMFG")) {
+  for(algo in c("walktrap", "louvain")) {
+    for(type in c("ega", "ega.fit")) {  # "hierega"
+      if(type=="ega.fit" & algo=="louvain") next  # Too slow
+      ega[[paste0(model, "_", algo, "_", type)]] <- EGAnet::bootEGA(
+        data = bait,
+        seed=123,
+        model=model,
+        algorithm=algo,
+        EGA.type=type,
+        type="resampling",
+        plot.itemStability=FALSE,
+        verbose=FALSE)
+      }
+   }
+}
+
+EGAnet::compare.EGA.plots(
+  ega$glasso_walktrap_ega, ega$glasso_walktrap_ega.fit,
+  ega$glasso_louvain_ega, ega$TMFG_louvain_ega,
+  ega$TMFG_walktrap_ega, ega$TMFG_walktrap_ega.fit,
+  labels=c("glasso_walktrap_ega", "glasso_walktrap_ega.fit",
+           "glasso_louvain_ega", "TMFG_louvain_ega",
+           "TMFG_walktrap_ega", "TMFG_walktrap_ega.fit"),
+                          rows=3,
+  plot.all = FALSE)$all
+```
+
+#### Dimension Stability
+
+Figures shows how often each variable is replicating in their empirical structure across bootstraps. 
+
+<!-- The summary statistics produced also relay this information as well as structural consistency. Structural consistency is defined as the extent to which each empirically derived dimension is exactly (i.e., identical variable composition) recovered from the replicate bootstrap samples (Christensen, Golino, & Silvia, 2020). In general, values of structural consistency and item stability greater than 0.70-0.75 reflect sufficient stability (Christensen & Golino, 2021). -->
+
+```{r}
+#| fig-height: 20
+#| fig-width: 12
+
+patchwork::wrap_plots(lapply(ega, plot), nrow = 3)
+```
+
+#### Final Model
+
+```{r}
+ega <- ega$TMFG_walktrap_ega$EGA
+plot(ega)
+
+ega_scores <-  EGAnet::net.scores(bait, ega)$scores$std.scores |> 
+  as.data.frame() |> 
+  setNames(c("EGA1", "EGA2")) 
 ```
 
 ### Scores
@@ -825,20 +901,21 @@ display(parameters::parameters(m1))
 # Merge with data
 scores <- lavaan::predict(m1) |> 
   as.data.frame() |> 
-  data_rename(c("ML2"), c("BAIT_SEM")) |> 
+  data_rename(c("ML1", "ML2"), c("BAIT_SEM1", "BAIT_SEM2")) |> 
+  cbind(ega_scores) |> 
   mutate(Participant = df$Participant) |>
   mutate(BAIT = rowMeans(select(bait, -contains("Videos")), na.rm = TRUE))
 
-df <- full_join(df, scores[c("Participant", "BAIT_SEM", "BAIT")], by="Participant")
+df <- full_join(df, scores, by="Participant")
 ```
 
 
 We computed two type of general scores for the BAIT scale, an **empirical** score based on the average of observed data (of the most loading items) and a **model-based** score as predicted by the structural model. The first one gives equal weight to all items (and keeps the same [0-1] range), while the second one is based on the factor loadings and the covariance structure.
 
 ```{r}
-correlation::cor_test(scores, "BAIT_SEM", "BAIT") |> 
+correlation::cor_test(scores, "BAIT_SEM2", "BAIT") |> 
   plot() +
-  ggside::geom_xsidedensity(aes(x=BAIT_SEM), color="grey", linewidth=1) +
+  ggside::geom_xsidedensity(aes(x=BAIT_SEM2), color="grey", linewidth=1) +
   ggside::geom_ysidedensity(aes(y=BAIT), color="grey", linewidth=1) +
   ggside::scale_xsidey_continuous(expand = c(0, 0)) +
   ggside::scale_ysidex_continuous(expand = c(0, 0)) +
@@ -847,6 +924,17 @@ correlation::cor_test(scores, "BAIT_SEM", "BAIT") |>
 ```
 
 While the two correlate substantially, they have different benefits. The empirical score has a more straightforward meaning and is more reproducible (as it is not based on a model fitted on a specific sample), the model-based score takes into account the relative importance of the contribution of each item to their factor.
+
+```{r}
+table <- correlation::correlation(scores) |> 
+  summary()
+
+format(table) |> 
+  datawizard::data_rename("Parameter", "Variables") |> 
+  gt::gt() |> 
+  gt::cols_align(align="center") |> 
+  gt::tab_options(column_labels.font.weight="bold")
+```
 
 ### Validity
 
@@ -874,8 +962,8 @@ df |>
 
 
 # m <- betareg::betareg(BAIT ~ AI_Knowledge, data=df)
-m <- lm(BAIT_SEM ~ AI_Knowledge, data=df)
-# m <- brms::brm(BAIT ~ mo(AI_Knowledge), data=dfsub, algorithm = "meanfield")
+m <- lm(BAIT ~ AI_Knowledge, data=df)
+# m <- brms::brm(BAIT ~ mo(AI_Knowledge), data=df, algorithm = "meanfield")
 # m <- brms::brm(BAIT ~ AI_Knowledge, data=dfsub, algorithm = "meanfield")
 display(parameters::parameters(m))
 
@@ -883,7 +971,7 @@ display(parameters::parameters(m))
 marginaleffects::predictions(m, by=c("AI_Knowledge"), newdata = "marginalmeans") |> 
   as.data.frame() |> 
   ggplot(aes(x=AI_Knowledge, y=estimate)) +
-  geom_jitter2(data=df, aes(y=BAIT_SEM), alpha=0.2, width=0.1) +
+  geom_jitter2(data=df, aes(y=BAIT), alpha=0.2, width=0.1) +
   geom_line(aes(group=1), position = position_dodge(width=0.2)) +
   geom_pointrange(aes(ymin = conf.low, ymax=conf.high), position = position_dodge(width=0.2)) +
   theme_minimal() +
@@ -894,7 +982,7 @@ marginaleffects::predictions(m, by=c("AI_Knowledge"), newdata = "marginalmeans")
 
 ```{r}
 # m <- betareg::betareg(BAIT ~ Sex / Age, data=df, na.action=na.omit)
-m <- lm(BAIT_SEM ~ Sex / Age, data=df)
+m <- lm(BAIT ~ Sex / Age, data=df)
 display(parameters::parameters(m))
 ```
 
@@ -902,7 +990,7 @@ display(parameters::parameters(m))
 
 
 ```{r}
-glm(Feedback_LabelsIncorrect ~ BAIT_SEM * AI_Knowledge, 
+glm(Feedback_LabelsIncorrect ~ BAIT * AI_Knowledge, 
     data=mutate(df, Feedback_LabelsIncorrect = ifelse(Feedback_LabelsIncorrect=="True", 1, 0)), 
     family="binomial") |> 
   parameters::parameters() |> 
@@ -910,7 +998,7 @@ glm(Feedback_LabelsIncorrect ~ BAIT_SEM * AI_Knowledge,
 ```
 
 ```{r}
-glm(Feedback_LabelsReversed ~ BAIT_SEM * AI_Knowledge, 
+glm(Feedback_LabelsReversed ~ BAIT * AI_Knowledge, 
     data=mutate(df, Feedback_LabelsReversed = ifelse(Feedback_LabelsReversed=="True", 1, 0)), 
     family="binomial") |> 
   parameters::parameters() |> 
@@ -918,7 +1006,7 @@ glm(Feedback_LabelsReversed ~ BAIT_SEM * AI_Knowledge,
 ```
 
 ```{r}
-glm(Feedback_CouldDiscriminate ~ BAIT_SEM * AI_Knowledge, 
+glm(Feedback_CouldDiscriminate ~ BAIT * AI_Knowledge, 
     data=mutate(df, Feedback_CouldDiscriminate = ifelse(Feedback_CouldDiscriminate=="True", 1, 0)), 
     family="binomial") |> 
   parameters::parameters() |> 
@@ -926,7 +1014,7 @@ glm(Feedback_CouldDiscriminate ~ BAIT_SEM * AI_Knowledge,
 ```
 
 ```{r}
-glm(Feedback_CouldNotDiscriminate ~ BAIT_SEM * AI_Knowledge, 
+glm(Feedback_CouldNotDiscriminate ~ BAIT * AI_Knowledge, 
     data=mutate(df, Feedback_CouldNotDiscriminate = ifelse(Feedback_CouldNotDiscriminate=="True", 1, 0)), 
     family="binomial") |> 
   parameters::parameters() |> 
@@ -934,7 +1022,7 @@ glm(Feedback_CouldNotDiscriminate ~ BAIT_SEM * AI_Knowledge,
 ```
 
 ```{r}
-glm(Feedback_Fun ~ BAIT_SEM * AI_Knowledge, 
+glm(Feedback_Fun ~ BAIT * AI_Knowledge, 
     data=mutate(df, Feedback_Fun = ifelse(Feedback_Fun=="True", 1, 0)), 
     family="binomial") |> 
   parameters::parameters() |> 
@@ -942,7 +1030,7 @@ glm(Feedback_Fun ~ BAIT_SEM * AI_Knowledge,
 ```
 
 ```{r}
-glm(Feedback_Boring ~ BAIT_SEM * AI_Knowledge, 
+glm(Feedback_Boring ~ BAIT * AI_Knowledge, 
     data=mutate(df, Feedback_Boring = ifelse(Feedback_Boring=="True", 1, 0)), 
     family="binomial") |> 
   parameters::parameters() |> 
